crates/plotnik-lib/src/engine/snapshots/plotnik_lib__engine__engine_tests__alternation_merge_ident.snap
---
source: crates/plotnik-lib/src/engine/engine_tests.rs
---
Q = (program (lexical_declaration (variable_declarator value: [(identifier) @ident (number) @num])))
---
let x = y
---
{
  "num": null,
  "ident": {
    "kind": "identifier",
    "text": "y",
    "span": [
      8,
      9
    ]
  }
}
