crates/plotnik-lib/src/engine/snapshots/plotnik_lib__engine__engine_tests__alternation_tagged_num.snap
---
source: crates/plotnik-lib/src/engine/engine_tests.rs
---
Value = [Ident: (identifier) @name  Num: (number) @val]
Q = (program (lexical_declaration (variable_declarator value: (Value) @value)))
---
let x = 42
---
{
  "value": {
    "$tag": "Num",
    "$data": {
      "val": {
        "kind": "number",
        "text": "42",
        "span": [
          8,
          10
        ]
      }
    }
  }
}
