crates/plotnik-lib/src/engine/snapshots/plotnik_lib__engine__engine_tests__anchor_last_child_single.snap
---
source: crates/plotnik-lib/src/engine/engine_tests.rs
---
Q = (program (function_declaration) @only .)
---
function only() {}
---
{
  "only": {
    "kind": "function_declaration",
    "text": "function only() {}",
    "span": [
      0,
      18
    ]
  }
}
