crates/plotnik-lib/src/engine/snapshots/plotnik_lib__engine__engine_tests__capture_single.snap
---
source: crates/plotnik-lib/src/engine/engine_tests.rs
---
Q = (program (lexical_declaration (variable_declarator name: (identifier) @name)))
---
let x = 1
---
{
  "name": {
    "kind": "identifier",
    "text": "x",
    "span": [
      4,
      5
    ]
  }
}
