crates/plotnik-lib/src/engine/snapshots/plotnik_lib__engine__engine_tests__quantifier_optional_present.snap
---
source: crates/plotnik-lib/src/engine/engine_tests.rs
---
Q = (program (lexical_declaration (variable_declarator name: (identifier) @name value: (number)? @value)))
---
let x = 42
---
{
  "name": {
    "kind": "identifier",
    "text": "x",
    "span": [
      4,
      5
    ]
  },
  "value": {
    "kind": "number",
    "text": "42",
    "span": [
      8,
      10
    ]
  }
}
